Refactor: seperate collector from main.py into src/binance_collector.py.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     volumes:
       - ./data:/app/data
       - ./logs:/app/logs
+      - ./src:/app/src
+      - ./main.py:/app/main.py
       - ./.env:/app/.env
     restart: unless-stopped
     logging:
